--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script type="module" src="main.js">
-</script>
 </head>
 <body>
     <canvas id="myCanvas" width="200" height="200"></canvas>
 </body>
+<script type="module" src="main.js"></script>
+
+<script>
+
+</script>
 </html>
